@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added argument-less constructor in Fuid Widget Class
 	- Fixed menu item counting issue in Fluid (STR #2322)
 	- Added Fl_Menu_::find_item by callback
 	- Removed redundant Fl_Group casts
